manifests/05-deployment-strategies/canary-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payments-canary-route
  namespace: traffic-lab
spec:
  parentRefs:
  - name: internal-gateway
    namespace: gateway-infra
    sectionName: http
  hostnames:
  - "payments.enterprise.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    # 90% of requests routed to stable v1
    - name: payments-v1-svc
      port: 8080
      weight: 90
    # 10% of requests routed to canary v2
    - name: payments-v2-svc
      port: 8080
      weight: 10
